--- a/Resources/views/Admin/Mozaic/photos.html.twig
+++ b/Resources/views/Admin/Mozaic/photos.html.twig
@@ -2,7 +2,7 @@
 
 {% trans_default_domain 'mozaic' %}
 
-{% block page_title %}
+{% block title %}
     {{ 'admin.title.all_photos' | trans | desc('All photos') }} - {{ parent() }}
 {% endblock %}
 
@@ -10,7 +10,7 @@
     {{ 'admin.page_title.all_photos' | trans | desc('All photos') }}
 {% endblock %}
 
-{% block main %}
+{% block body %}
     <div class="bg-light">
         <div class="container pt-3 pb-1">
             <div class="d-flex justify-content-center text-muted ">
