--- a/Resources/views/Admin/Season/index.html.twig
+++ b/Resources/views/Admin/Season/index.html.twig
@@ -2,7 +2,7 @@
 
 {% trans_default_domain 'mozaic' %}
 
-{% block page_title %}
+{% block title %}
     {{ 'admin.title.season_index' | trans | desc('Seasons') }} - {{ parent() }}
 {% endblock %}
 
@@ -10,7 +10,7 @@
     {{ 'admin.page_title.season_index' | trans | desc('Seasons') }}
 {% endblock %}
 
-{% block main %}
+{% block body %}
     <div class="container py-3">
         <a href="{{ path('disjfa_mozaic_admin_season_create') }}" class="btn btn-primary">
             <i class="fas fa-plus"></i>
