--- a/Resources/views/Admin/Season/show.html.twig
+++ b/Resources/views/Admin/Season/show.html.twig
@@ -2,7 +2,7 @@
 
 {% trans_default_domain 'mozaic' %}
 
-{% block page_title %}
+{% block title %}
     {{ unsplashSeason.title }} - {{ parent() }}
 {% endblock %}
 
@@ -10,7 +10,7 @@
     {{ unsplashSeason.title }}
 {% endblock %}
 
-{% block main %}
+{% block body %}
     <div class="container py-3">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
