--- a/Resources/views/Puzzle/my_progress.html.twig
+++ b/Resources/views/Puzzle/my_progress.html.twig
@@ -2,11 +2,11 @@
 
 {% trans_default_domain 'mozaic' %}
 
-{% block page_title %}
+{% block title %}
     My progress - {{ parent() }}
 {% endblock %}
 
-{% block main %}
+{% block body %}
     <div class="container">
         <h1>My progress</h1>
 
