--- a/Resources/views/Puzzle/photo.html.twig
+++ b/Resources/views/Puzzle/photo.html.twig
@@ -42,7 +42,28 @@
         {% endif %}
 
         <div class="row">
-            <div class="col-xl-10 col-xs-12">
+            <div class="col-12 col-md-10">
+                <div {{ stimulus_controller('mozaic', {route: path('disjfa_mozaic_api_puzzle_photo', {'unsplashPhoto': unsplashPhoto.unsplashId}), token: csrf_token(unsplashPhoto.id), finish: path('disjfa_mozaic_api_puzzle_finish', {'unsplashPhoto': unsplashPhoto.unsplashId}) }) }}>
+                    <div>
+                        <div class="mozaic-body">
+                            <div class="mozaic-base" {{  stimulus_target('mozaic', 'base') }}>
+
+                            </div>
+                            <div>
+                                <a href="#" class="btn close" @click="toggleFullscreen()">
+                                    <i class="fa fa-times"></i>
+                                </a>
+                                <a href="#" class="btn fullscreen pull-right" @click="toggleFullscreen()">
+                                    <i class="fa fa-window-maximize"></i>
+                                    Full screen
+                                </a>
+                                ClickCount: <span class="tag tag-success"></span>
+                                <span class="tag tag-success" v-if="done">Success</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <mozaic unsplash-route="{{ path('disjfa_mozaic_api_puzzle_photo', {'unsplashPhoto': unsplashPhoto.unsplashId}) }}" token="{{ csrf_token(unsplashPhoto.id) }}" finish-route="{{ path('disjfa_mozaic_api_puzzle_finish', {'unsplashPhoto': unsplashPhoto.unsplashId}) }}"></mozaic>
                 <hr>
                 <div class="btn-group">
@@ -56,7 +77,7 @@
                 </div>
                 <br>
             </div>
-            <div class="col-xl-2 col-xs-12">
+            <div class="col-12 col-md-2">
                 <h4>
                     Photo by
                     <a href="{{ unsplashPhoto.unsplashUser.linkHtml }}">{{ unsplashPhoto.unsplashUser.name }}</a>
