--- a/Resources/views/Season/index.html.twig
+++ b/Resources/views/Season/index.html.twig
@@ -64,9 +64,9 @@
     {% else %}
         <div class="bg-primary text-white py-5">
             <div class="container">
-                <h1>{{ 'title.no_season_yet' | trans |desc('No season yet, sadly') }}</h1>
+                <h1>{{ 'title.no_season_yet' | trans }}</h1>
                 <p>
-                    {{ 'text.check_back_soon' | trans | desc('Check back soon, there will be one') }}
+                    {{ 'text.check_back_soon' | trans }}
                 </p>
             </div>
         </div>
