--- a/Resources/views/Admin/Mozaic/daily.html.twig
+++ b/Resources/views/Admin/Mozaic/daily.html.twig
@@ -37,7 +37,7 @@
             {% else %}
                 <div class="col-12 py-3">
                     <div class="alert alert-info">
-                        {{ 'admin.label.No_items_found' | trans }}
+                        {{ 'admin.label.no_items_found' | trans }}
                     </div>
                 </div>
             {% endfor %}
