--- a/Resources/views/Season/show.html.twig
+++ b/Resources/views/Season/show.html.twig
@@ -29,7 +29,7 @@
             {% if is_granted('edit', unsplashSeason) %}
                 <a href="{{ path('disjfa_mozaic_admin_season_show', {'unsplashSeason': unsplashSeason.id}) }}" class="btn btn-outline-light">
                     <i class="fas fa-edit"></i>
-                    {{ 'button.edit-season' | trans | desc('Edit season') }}
+                    {{ 'button.edit-season' | trans }}
                 </a>
             {% endif %}
         </div>
