--- a/Resources/views/Puzzle/photo.html.twig
+++ b/Resources/views/Puzzle/photo.html.twig
@@ -47,13 +47,14 @@
                     <div>
                         <div class="mozaic-body">
                             <div class="mozaic-base" {{ stimulus_target('disjfa/mozaic-bundle/puzzle', 'base') }}></div>
-                            <div>
-                                <button class="btn fullscreen pull-right" {{ stimulus_target('disjfa/mozaic-bundle/puzzle', 'fullscreen') }}>
-                                    <i class="fa fa-window-maximize"></i>
+                            <div class="d-flex gap-3 align-items-center mt-2">
+                                <button class="btn btn-outline-secondary fullscreen pull-right" {{ stimulus_target('disjfa/mozaic-bundle/puzzle', 'fullscreen') }}>
                                     Full screen
                                 </button>
-                                ClickCount:
-                                <span class="tag tag-success" {{ stimulus_target('disjfa/mozaic-bundle/puzzle', 'count') }}></span>
+                                <div>
+                                    ClickCount:
+                                    <span class="tag tag-success" {{ stimulus_target('disjfa/mozaic-bundle/puzzle', 'count') }}></span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -100,19 +101,16 @@
                 </div>
                 <hr>
                 <a href="{{ path('disjfa_mozaic_puzzle_random') }}">
-                    <i class="fas fa-random"></i>
                     {{ 'site.button.random_new_photo' | trans }}
                 </a>
                 {% if app.user %}
                     <hr>
                     {% if myPhotos | length %}
                         <div class="text-success">
-                            <i class="fas fa-check"></i>
                             {{ 'mozaic.title.you_have_finished_this_image' | trans }}
                         </div>
                     {% else %}
                         <div class="text-black-50">
-                            <i class="fas fa-minus"></i>
                             {{ 'mozaic.title.you_have_not_finished_this_image' | trans }}
                         </div>
                     {% endif %}
